--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,6 @@ body {
     color: var(--dark-text);
     line-height: 1.6;
     background-color: #fff;
-    font-display: swap;
 }
 
 /* ===== HEADER STYLES ===== */
@@ -520,10 +519,11 @@ body {
     background-image: url('./Photos/hero-bg.jpg');
     background-size: cover;
     background-position: center;
+    background-attachment: scroll;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     align-items: center;
     justify-content: center;
-    content-visibility: auto;
 }
 
 .hero-left {
